test/error/parser_files/semi_err04.err
File "parser_files/semi_err04.st", line 1, characters 12-13:
1 | f := 1, 2, : int.
               ^
Error: Syntax error.
Hint: Cannot have ':' after ",".
